--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
               <input name="phone" type="tel" id="phone" pattern="[0-9]{3}[\-\s]?[0-9]{3}[\-\s]?[0-9]{4}" title="Please enter your 10-digit phone number (e.g. 1234567890, 123 456 7890, 123-456-7890)" required />
             </p>
             <p>
-              <label for="pword">PASSWORD</label>
-              <input name="pword" type="password" id="pword" required />
+              <label for="pwd">PASSWORD</label>
+              <input name="pwd" type="password" id="pwd" required />
               <span></span>
             </p>
             <p>
-              <label for="pword">CONFIRM PASSWORD</label>
+              <label for="confirm-pwd">CONFIRM PASSWORD</label>
               <input name="confirm-pwd" type="password" id="confirm-pwd" required />
             </p>
           </form>
